# octocheese

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.md  README.rst  __pkginfo__.py  action.yml  entrypoint.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  testing.yml
copy_pypi_2_github/: __init__.py  __main__.py  action.py  colours.py  core.py
doc-source/: Building.rst  Source.rst  action.rst  cli.py  conf.py  contributing.rst  docs.rst  index.rst  license.rst  local_extension.py  requirements.txt  usage.rst
octocheese/: __init__.py  __main__.py  action.py  colours.py  core.py
tests/: conftest.py  requirements.txt  sphinx_toolbox_pypi_mock_response.json  test_colours.py  test_core.py  test_docker.py  test_importability.py  test_main.py  test_operation.py
tests/cassettes/: test_operation.json  test_operation_max_tags[10].json  test_operation_max_tags[1].json  test_operation_max_tags[20].json  test_operation_max_tags[5].json
tests/test_core/: test_make_release_message_False_.md  test_make_release_message_True_.md
tests/test_core_/: test_make_release_message_False_.md  test_make_release_message_False__.md  test_make_release_message_False_content_.md  test_make_release_message_True_.md  (+1 more)
(+16 files in other folders)
