[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "octocheese"
version = "0.2.1"
description = "🐙 🧀 – Copy PyPI Packages to GitHub Releases"
readme = "README.rst"
keywords = [ "github", "github-action", "pypi",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/octocheese"
"Issue Tracker" = "https://github.com/domdfcoding/octocheese/issues"
"Source Code" = "https://github.com/domdfcoding/octocheese"
Documentation = "https://octocheese.readthedocs.io/en/latest"

[project.scripts]
octocheese = "octocheese.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"

[tool.mkrecipe]
conda-channels = [ "domdfcoding",]
extras = "all"
